test/ui/test/lowering/use-in-unsupported.lushui
main: IO Unit =
    use qualified.thing as matter in
    this-location
